# Parallel.GAMIT

./: .editorconfig  .env.example  .env.sample  .gitignore  .gitleaksignore  .hadolint.yaml  .markdownlint.yml  .pre-commit-config.yaml  CeleryMigrationPlan.md  DEVELOPMENT.md  INSTALL.md  README.md  README3.md  TODO.txt  docker-compose.yml  gnss_data.cfg.example  mkdocs.yml  pixi.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  publish.yml  security.yml  test.yml
archive/: .env.sample  TODO.txt
archive/web_backend/: gnss_data.cfg
com/: AlterETM.py  ApplyCountryCode.py  ArchiveService.py  CloseStationInfo.py  CompareDBs.py  ConvertDate.py  ConvertTrimble.py  CreateEtmFunctions.py  DRA.py  DownloadSources.py  DownloadSourcesFill.py  EtmStacker.py  FixPlate.py  GenerateKml.py  GenerateSinex.py  IntegrityCheck.py  LocateRinex.py  ModelProcessing.py  NEQStack.py  OTL_FES2014b.py  ParallelGamit.py  PlotETM.py  PlotMapView.py  QueryETM.py  ReadPackage.py  S-score.py  ScanArchive.py  Stacker.py  StationInfoEdit.py  SyncOrbits.py  TrajectoryFit.py  UpdateEarthquakes.py  WeeklyCombination.py  Ztd2trp.py  gamit_stats.py
configuration_files/: conf_example.txt
database/: schema.sql  seed.sql
database/csv/: antennas.csv  gamit_htc.csv  keys.csv  receivers.csv  rinex_tank_struct.csv
docs/: PRIDE_PPPAR_Integration_Plan.md  index.md  installation.md
docs/development/: contributing.md  dependency-management.md
docs/installation/: cli-tools.md  database-setup.md  index.md  web-interface.md
docs/reference/: configuration.md
docs/usage/: cli-reference.md  web-interface.md
geode/: ConvertRaw.py  Utils.py  __init__.py  cluster.py  config.py  dbConnection.py  network.py  plots.py  proto_download.py  pyArchiveStruct.py  pyDate.py  pyETM.py  pyEvents.py  pyJobServer.py  pyLeastSquares.py  pyOTL.py  pyOkada.py  pyOptions.py  pyPPP.py  pyParseAntex.py  pyProducts.py  pyRinex.py  pyRinexName.py  pyRunWithRetry.py  pyStack.py  pyStatic1d.py  snxParse.py  station_selector.py
geode/elasticity/: DLN_func.py  diskload.py  elastic_gridder.py  elastic_interpolation.py  green_func.py  rectloadhs.py
geode/etm/: test.py
geode/etm/core/: data_classes.py  etm_config.py  etm_engine.py  etm_stacker.py  etm_stacker_vce.py  jump_manager.py  logging_config.py  s_score.py  type_declarations.py
geode/etm/data/: etm_database.py  solution_data.py
geode/etm/etm_functions/: auto_jumps.py  etm_function.py  jumps.py  periodic.py  polynomial.py  stochastic_signal.py
geode/etm/least_squares/: design_matrix.py  least_squares.py  ls_collocation.py  sva.py
geode/etm/visualization/: data_classes.py  data_prep.py  etm_plotting.py  histogram_template.py  plot_fields.py  time_series_template.py
geode/gamit/: gamit_config.py  gamit_session.py  gamit_task.py  globk_task.py  parse_ztd.py  station.py  ztd.py
geode/metadata/: igslog.py  station_info.py
geode/tests/: test_make_clusters.py  test_station_info.py  test_version.py
pgamit/: ConvertRaw.py  StationList.py  Utils.py  __init__.py  agglomerative.py  cluster.py  dbConnection.py  dbConnection_old.py  igslog.py  network.py  plots.py  proto_download.py  pyArchiveStruct.py  pyBunch.py  pyDate.py  pyETM.py  pyEvents.py  pyGamitConfig.py  pyGamitSession.py  pyGamitTask.py  pyGlobkTask.py  pyJobServer.py  pyLeastSquares.py  pyOTL.py  pyOkada.py  pyOptions.py  pyPPP.py  pyParseAntex.py  pyParseZTD.py  pyProducts.py  pyRinex.py  pyRinexName.py  pyRunWithRetry.py  pyStack.py  pyStatic1d.py  pyStation.py  pyStationInfo.py  pyTerminal.py  pyVoronoi.py  pyZTD.py  (+1 more)
pgamit/tests/: common.py  test_make_clusters.py  test_version.py
web/backend/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt  supervisord.conf
web/backend/api/: apps.py  exceptions.py  middleware.py  utils.py
web/backend/api/migrations/: 0009_auto_20240918_1936.py  0010_auto_20240920_1711.py  0011_auto_20241018_1549.py  0018_auto_20241223_1903.py
web/backend/backend/: Dockerfile  requirements.txt
web/backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/frontend/: Dockerfile  package-lock.json  package.json
web/frontend/srv/: nginx.conf
(+13 files in other folders)
