[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pgamit"
description = "A Python wrapper to parallelize GAMIT executions"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [
  { name = "Demi치n D. G칩mez", email = "demiang@gmail.com"},
]
maintainers = [
  { name = "Demi치n D. G칩mez", email = "demiang@gmail.com"},
  { name = "Shane Grigsby (espg)", email = "refuge@rocktalus.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["GAMIT", "GNSS", "geodesy", "parallel"]

requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas",
    "tqdm==4.67.1",
    "dispy",
    "psycopg2-binary==2.9.9",
    "pycos",
    "country-converter",
    "earthscope-cli==0.8.2",
    "earthscope-sdk==0.2.0",
    "basemap==1.4.0",
    "cryptography==44.0.1",
    "dirsync>=2.2.4",
    "geopy==2.4.1",
    #h5py==3.4.0
    #hdf5storage>=0.1.18
    "usgs-libcomcat",
    "matplotlib>=2.0.0",
    "munch==2.5.0",
    "netifaces==0.10.9",
    "networkx",
    "paramiko==3.4.0",
    "psutil>=5.6.3",
    "pysftp==0.2.9",
    "requests==2.32.4",
    "scandir>=1.6",
    "scikit-learn>=1.1",
    "scipy>=1.2.0",
    "simplekml==1.3.6",
    "xmltodict==0.13.0",
    "scikit-image",
    "shapely",
    "obspy"
]

[project.urls]
"Homepage" = "https://github.com/demiangomez/Parallel.GAMIT"
"Bug Tracker" = "https://github.com/demiangomez/Parallel.GAMIT/issues"

[tool.setuptools]
packages = ["pgamit"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --ignore=web --ignore=docs_legacy --ignore=archive"
testpaths = [
    "pgamit/tests",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"  # Managed by setuptools-scm
tag_format = "v$version"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true


[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "S",    # flake8-bandit (security)
    # Future: enable these as legacy code is cleaned up
    # "UP",   # pyupgrade
    # "B",    # flake8-bugbear
    # "SIM",  # flake8-simplify
]
ignore = [
    # Formatting (handled by ruff format)
    "E501",   # Line too long
    "W291",   # Trailing whitespace (in strings/comments formatter can't fix)
    "W293",   # Blank line contains whitespace (same as above)
    # Legacy code patterns (to be addressed incrementally)
    "E402",   # Module import not at top of file
    "E711",   # Comparison to None (== None vs is None)
    "E712",   # Comparison to True/False
    "E722",   # Bare except
    "E731",   # Lambda assignment
    "E741",   # Ambiguous variable name
    "F402",   # Import shadowed by loop variable
    "F811",   # Redefined while unused
    "F841",   # Local variable assigned but never used
    # Security (intentional patterns in GNSS/scientific computing)
    "S101",   # Assert statements (invariant checking)
    "S105",   # Hardcoded password string
    "S108",   # Hardcoded temp file paths
    "S110",   # Try-except-pass
    "S307",   # Suspicious eval usage
    "S311",   # Non-cryptographic random (clustering seeds)
    "S314",   # Suspicious XML usage
    "S321",   # FTP usage (GNSS data distribution)
    "S324",   # Insecure hash function
    "S506",   # Unsafe YAML load
    "S603",   # Subprocess without shell check
    "S604",   # Call with shell=True
    "S605",   # Start process with a shell
    "S607",   # Start process with partial path
    "S608",   # Hardcoded SQL expressions
]

[tool.ruff.format]
quote-style = "double"

[tool.ty.src]
include = ["pgamit", "com"]
exclude = [
  "archive",
  "web",
  "docs",
  "docs_legacy",
  ".pixi",
  ".pytest_cache",
  ".mypy_cache",
]

[tool.ty.environment]
python-version = "3.10"
